@@ -16,7 +16,11 @@ public class Subsystems {
 
 	public static List<Subsystem> allSubsystems;
 	public static DriveTalon DRIVE;
-//	public static Magazine MAGAZINE;
+	public static Intake INTAKE;
+	public static Magazine MAGAZINE;
+	public static Shooter SHOOTER;
+	public static Climber CLIMBER;
+
 	public static final Looper LOOPER = new Looper(RobotMode.DISABLED); //FIXME put looper somewhere else
 
 	private static class SmartDashboardLoop implements Loop{
@@ -33,10 +37,11 @@ public class Subsystems {
 
 	public static void initializeSubsystems() {
 		DRIVE = new DriveTalon();
-//		MAGAZINE = new Magazine();
-		allSubsystems = Collections.unmodifiableList(Arrays.asList(
-				DRIVE//, MAGAZINE
-		));
+		INTAKE = new Intake();
+		MAGAZINE = new Magazine();
+		SHOOTER = new Shooter();
+		CLIMBER = new Climber();
+		allSubsystems = List.of(DRIVE, INTAKE, MAGAZINE, SHOOTER, CLIMBER);
 		LOOPER.addLoop(new SmartDashboardLoop());
 	}
 
